test: Update GymServiceTest to verify gym deletion inactivates associated workouts and exercises